--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     padding: 0;
@@ -7,7 +7,7 @@
 }
 html{
     font-size: 10px;
-    font-family:'Lobster&family', sans-serif ;
+    font-family:'Montserrat', sans-serif ;
 }
 .container{
     width: 100%;
